service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: service-foo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
    nodePort: 30061
  selector:
    app: my-app
  type: NodePort
